--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "nextjs-store",
-  "version": "0.1.0",
+  "name": "nextjs-cloneyol",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -15,7 +15,6 @@
     "@tailwindcss/aspect-ratio": "^0.2.0",
     "@tailwindcss/forms": "^0.3.2",
     "@tailwindcss/line-clamp": "^0.2.0",
-    "@trendyol-js/react-carousel": "^1.0.5",
     "@types/lodash": "^4.14.168",
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
@@ -25,18 +24,15 @@
     "next": "10.1.3",
     "next-auth": "^3.14.6",
     "react": "17.0.2",
-    "react-alice-carousel": "^2.5.1",
     "react-cookie": "^4.0.3",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.0.5",
     "react-icons": "^4.2.0",
     "react-modal": "^3.13.1",
-    "react-moment": "^1.1.1",
     "react-select": "^4.3.0",
     "react-slick": "^0.28.1",
     "react-tabs": "^3.2.2",
     "react-toastify": "^7.0.3",
-    "slick-carousel": "^1.8.1",
     "swr": "^0.5.5",
     "uuid": "^8.3.2",
     "yup": "^0.32.9"
